@@ -1416,6 +1416,11 @@ class ConnectionError(TransportError):
     _fmt = "Connection error: %(msg)s %(orig_error)s"
 
 
+class ConnectionErrorOnStartUp(TransportError):
+
+    _fmt = "Disconnected from server during negotiation: %(msg)s %(orig_error)s"
+
+
 class SocketConnectionError(ConnectionError):
 
     _fmt = "%(msg)s %(host)s%(port)s%(orig_error)s"
@@ -1530,6 +1535,7 @@ class RedirectRequested(TransportError):
 class TooManyRedirections(TransportError):
 
     _fmt = "Too many redirections"
+
 
 class ConflictsInTree(BzrError):
 
