@@ -399,8 +399,16 @@ class SmartClientRequestProtocolOne(SmartProtocolBase):
         while not line or line[-1] != '\n':
             # TODO: this is inefficient - but tuples are short.
             new_char = self._request.read_bytes(1)
+            if new_char == '':
+                # end of file encountered reading from server
+                if len(line) == 0:
+                    # disconnected before any data read
+                    raise errors.ConnectionErrorOnStartUp(
+                        "please check connectivity and permissions")
+                else:
+                    # disconnected after some data received
+                    raise errors.ConnectionReset("connection timeout")
             line += new_char
-            assert new_char != '', "end of file reading from server."
         return line
 
     def query_version(self):
